# edmund-botadder

./: .gitignore  README.md  pyproject.toml
edmundbotadder/: __init__.py  __main__.py  bot.py  constants.py
edmundbotadder/cogs/: commands.py  general.py  webhook.py
